--- a/Resources/config/event_listeners.yml
+++ b/Resources/config/event_listeners.yml
@@ -13,6 +13,6 @@ services:
 
     sibers_api.exception_subscriber:
         class: Sibers\ApiBundle\EventListener\ApiExceptionSubscriber
-        arguments: [ '@sibers_api.error_handler']
+        arguments: [ '@sibers_api.error_handler', '%kernel.environment%']
         tags:
             - { name: kernel.event_subscriber, event: kernel.exception }
